# brain-modeling-ecosystem

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  book.md  citation.rst  conf.py  courses.md  index.md  index.rst  papers_using_us.md  papers_usng_us.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI-daily.yml  CI.yml  Publish.yml
BrainX/: __init__.py
BrainX/tests/: test_version.py
brain_modeling_ecosystem/: __init__.py
brain_modeling_ecosystem/tests/: test_version.py
brainmodeling/: __init__.py
brainmodeling/tests/: test_version.py
brainx/: __init__.py
brainx/tests/: test_version.py
docs/: BrainX_core_components.rst  CHANGELOG.md  Makefile  basics.md  book_brainpy.md  books.md  brain_simulation_point_neuron.md  braincell_HH_EI_network-zh.ipynb  braincell_HH_EI_network.ipynb  braincell_HH_EI_network.ipynb.backup  braincell_HH_neuron-zh.ipynb  braincell_HH_neuron.ipynb  braincell_HH_thalamus_oscillations-zh.ipynb  braincell_HH_thalamus_oscillations.ipynb  braincell_HH_thalamus_oscillations.ipynb.backup  braincell_morphological_golgi_cell.ipynb  brainmass_Modeling_MEG_data_zh.ipynb  brainmass_Whole_brain_neural_mass_modeling_zh.ipynb  brainmass_jansenrit_node_simulation.ipynb  brainpy_book.md  brainstate_EI_spiking_network.ipynb  brainstate_LIF_neuron.ipynb  brainstate_alignpre_aignpost.ipynb  brainstate_drosophila_wholebrain_simulation.ipynb  brainstate_spiking_gamma_oscillations.ipynb  brainstate_transformations.ipynb  brainunit_unit_aware_computations.ipynb  citation.md  citation.rst  conf.py  contributing.md  core_components.rst  courses.md  doclink.md  doclink.rst  ecosystem.html  ecosystem.rst  getting_started.md  highlight-test-lexer.py  highlight_test_lexer.py  (+7 more)
docs/_static/: manifest.json  service-worker.js
docs/basics/: brainstate_alignpre_aignpost.ipynb  brainstate_transformations.ipynb  brainunit_unit_aware_computations.ipynb
docs/books/: index.md
docs/courses/: index.md  ncmp_course_3rd.md
docs/getting_started/: braincell_HH_EI_network-zh.ipynb  braincell_HH_EI_network.ipynb  braincell_HH_neuron-zh.ipynb  braincell_HH_neuron.ipynb  braincell_morphological_golgi_cell.ipynb  brainmass_Modeling_MEG_data_zh.ipynb  brainmass_jansenrit_node_simulation.ipynb  brainpy_EI_spiking_network.ipynb  brainpy_LIF_neuron.ipynb  brainstate_LIF_neuron.ipynb  index.md
docs/point_neuron_examples/: braincell_HH_thalamus_oscillations-zh.ipynb  braincell_HH_thalamus_oscillations.ipynb  brainpy_spiking_gamma_oscillations.ipynb  brainstate_drosophila_wholebrain_simulation.ipynb  index.md
(+3 files in other folders)
