# Copyright 2026 BrainX Ecosystem Limited. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "BrainX"
description = "Ecosystem for Brain Simulation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BrainX Ecosystem", email = "chao.brain@qq.com" }]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "computational neuroscience",
    "brain-inspired computation",
    "brain simulation",
    "brain modeling",
]
dynamic = [
    "version",
    "dependencies",
]


[project.urls]
Documentation = "https://brainmodeling.readthedocs.io/"
Homepage = "https://github.com/chaobrain/brain-modeling-ecosystem"
"Source Code" = "https://github.com/chaobrain/brain-modeling-ecosystem"
"Bug Tracker" = "https://github.com/chaobrain/brain-modeling-ecosystem/issues"


[project.optional-dependencies]
cpu = ["jax[cpu]", "numba"]
cuda12 = ["jax[cuda12]", "ninja"]
cuda13 = ["jax[cuda13]", "ninja"]
tpu = ["jax[tpu]"]


[tool.setuptools.packages.find]
exclude = [
    "dev*",
    "docs*",
    "tests*",
    "examples*",
    "experiments*",
    "benchmark*",
    "build*",
    "dist*",
    "BrainX.egg-info*",
    "BrainX/__pycache__*"
]


[tool.setuptools.dynamic]
version = { attr = "BrainX.__version__" }
dependencies = { file = ["requirements.txt"] }
